# buy-predictor-agent-2

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: .env  config.py  main.py
backend/tools/: .gitignore
backend/tools/data_preparation/: README.md  data_preparation.py
backend/tools/intent_predictor/: final_intent_model.pkl  predictor.py  train_scoring.py
frontend/: app.py
