[project]
name = "buy-predict-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.3.13",
    "langchain-core==0.3.28",
    "langchain-ollama==0.2.2",
    "pandas==2.2.3",
    "pydantic==2.10.5",
    "python-dotenv>=1.0.0",
    "streamlit>=1.52.2",
]
